feat: 각 로또의 당첨 순위 결정 구현
여러 로또들에 대하여 추첨을 진행하고 당첨 순위를 결정하는 기능을 구현했습니다.